# PWA-payment

./: COMPILATION_FIXES.md  Cargo.toml  DEBUG_NOTIFICATION_ISSUE.md  FIXES_APPLIED.md  FIXES_SUMMARY.md  IMPROVEMENTS.md  QUICK_FIX_TEST.md  README.md  RECURRING_PAYMENTS_GUIDE.md  backend-frontend-alignment-review.md  code_review_findings.md  frontend-code-review.md
backend/: .env  .env.example  Cargo.toml
backend/src/: .env  .env.example  main.rs
backend/src/handlers/: mod.rs  notification.rs  payment.rs  subscription.rs  user.rs
backend/src/models/: mod.rs  notification.rs  payment.rs  recurring_payment.rs  subscription.rs  user.rs
backend/src/services/: database.rs  mod.rs  peach.rs  subscription.rs
backend/src/tasks/: mod.rs  renewal_task.rs
backend/src/utils/: config.rs
front/: .env  style.css
front/static/: app.js  config.js  env-config.example.html  index.html  payment-result.html
frontend/: .env  .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/public/: manifest.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: HomePage.jsx  PaymentForm.jsx  PaymentMethodManager.jsx  PeachCheckout.jsx  Statistics.jsx  SubscriptionStatus.jsx  SuccessPage.jsx  VoucherInput.jsx
frontend/src/services/: api.js
frontend/src/styles/: main.css
src/: config.rs  main.rs
src/models/: common.rs  mod.rs  payment.rs  subscription.rs  user.rs
src/services/: database.rs  mod.rs  peach.rs
