[package]
name = "subscription-app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
surrealdb = "1.0"
anyhow = "1.0"
thiserror = "1.0"
validator = { version = "0.16", features = ["derive"] }
rust_decimal = { version = "1.32", features = ["serde-float"] }
regex = "1.10"